# neatplot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: README.md  example_00.py  example_00_default.py  example_01.py  example_01_modify_rc.py  example_02_no_latex.py  example_02_notex.py  example_03_fonts.py  example_03_only_fonts.py  example_04_nolatex_sansserif.py  example_04_notex_helvetica.py  example_05_notex_palatino.py
neatplot/: __init__.py
plot_python/: __init__.py
